<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABE38B"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:padding="5sp"
                android:text="@string/let_s_play_cricket"
                android:textAlignment="center"
                android:textColor="#E80E40"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp">

            <EditText
                android:id="@+id/teamA"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="TEAM A"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#3363F4"
                android:textColorHint="#3363F4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="vs"
                android:textColor="#3363F4"
                android:textColorHint="#3363F4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/teamB"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="TEAM B"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#3363F4"
                android:textColorHint="#3363F4"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/toss_the_coin"
        android:textAlignment="center"
        android:textColor="#E81313"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />


    <ImageView
        android:id="@+id/tossCoin"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/heads"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/nextToFragmentA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="8dp"
        android:onClick="nextToFragmentA"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tossCoin"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>