<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FACDE9"
    tools:context=".MainActivity">

  <EditText
      android:id="@+id/date"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:ems="10"
      android:hint="Date"
      android:inputType="date"
      android:textAlignment="center"
      android:textColor="#EAB926"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

  <TableRow
      android:id="@+id/tableRow3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date">

    <EditText
        android:id="@+id/team_A"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="TEAM A"
        android:inputType="textPersonName"
        android:paddingRight="10dp"
        android:textAlignment="textEnd"
        android:textColor="#3363F4"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VS"
        android:textColor="#DA1717"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/team_B"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="TEAM B"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textColor="#3363F4"
        android:textSize="20sp"
        android:textStyle="bold" />
  </TableRow>

  <TextView
      android:id="@+id/textView13"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:text="@string/toss_won_by"
      android:textAlignment="center"
      android:textColor="#E81313"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tableRow3" />

  <TextView
      android:id="@+id/textView14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="8dp"
      android:text="@string/selected_to"
      android:textColor="#E81313"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

  <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="388dp"
      android:layout_height="59dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.47"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView13">

    <RadioButton
        android:id="@+id/teamARadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/team_A"
        android:inputType="textPersonName"
        android:padding="5sp"
        android:textColor="#04378E"
        android:textColorHint="#8BA9DD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/teamBRadioButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="TextContrastCheck" />

    <RadioButton
        android:id="@+id/teamBRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/team_B"
        android:inputType="textPersonName"

        android:padding="5sp"
        android:textColor="#04378E"
        android:textColorHint="#8BA9DD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/teamARadioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="TextContrastCheck" />
  </RadioGroup>

  <RadioGroup
      android:id="@+id/radioGroup2"
      android:layout_width="367dp"
      android:layout_height="64dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.46"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView14">

    <RadioButton
        android:id="@+id/batRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:padding="5sp"
        android:text="@string/bat_first"
        android:textColor="#04378E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ballRadioButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <RadioButton
        android:id="@+id/ballRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:padding="5sp"
        android:text="@string/ball_first"
        android:textColor="#04378E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/batRadioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/batRadioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />
  </RadioGroup>

  <TableRow
      android:id="@+id/tableRow2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tournament Name :"
        android:textColor="#1054DF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tournamentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Tournament name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#3363F4"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />
  </TableRow>

  <TableRow
      android:id="@+id/tableRow"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tableRow2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vanue                       :"
        android:textColor="#1054DF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tournamentVanue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Tournament Vanue"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#3363F4"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />
  </TableRow>

  <TableRow
      android:id="@+id/tableRow4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tableRow">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number of Over      :"
        android:textColor="#1054DF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numberOfOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Number of Over"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#3363F4"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />
  </TableRow>

  <Button
      android:id="@+id/startMatch"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="56dp"
      android:layout_marginEnd="8dp"
      android:text="Start Match"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tableRow4" />

</androidx.constraintlayout.widget.ConstraintLayout>